--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 </head>
 <body>
+    <link rel="styles.css">
     <!-- Анимированный фон -->
     <div class="floating-shapes">
         <div class="shape"></div>
