--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 </head>
 <body>
     <link rel="styles.css">
+    <link rel="script.js">
     <!-- Анимированный фон -->
     <div class="floating-shapes">
         <div class="shape"></div>
