--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 </head>
 <body>
-    <link rel="styles.css">
-    <link rel="script.js">
+      <link rel="stylesheet" href="style.css">
+    <script src="scripts/game.js"></script>
     <!-- Анимированный фон -->
     <div class="floating-shapes">
         <div class="shape"></div>
