--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 </head>
 <body>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="styles.css">
     <script src="scripts/game.js"></script>
     <!-- Анимированный фон -->
     <div class="floating-shapes">
