--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 </head>
 <body>
       <link rel="stylesheet" href="styles.css">
+         <script src="script.js"></script>
     <!-- Анимированный фон -->
     <div class="floating-shapes">
         <div class="shape"></div>
@@ -180,7 +181,7 @@ let count = 0;
         </div>
     </div>
       
-    <script src="scripts/game.js"></script>
+ 
       
     </body>
 </html>
