--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 </head>
 <body>
       <link rel="stylesheet" href="styles.css">
-         <script src="script.js"></script>
+         <script src="script.js">
     <!-- Анимированный фон -->
     <div class="floating-shapes">
         <div class="shape"></div>
