--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ p {
                     <div class="input-group">
                         <select id="css-select">
                             <option value="">🎨 Выбери стиль...</option>
-                            <option value="color: blue; text-align: center;">💙 Синий по центру</option>
-                            <option value="font-size: 24px; background: yellow;">💛 Большой с фоном</option>
-                            <option value="border: 2px solid red; padding: 10px;">❤️ Рамка с отступом</option>
+                            <option value="color: blue; text-align: center;">color: blue; text-align: center;</option>
+                            <option value="font-size: 24px; background: yellow;">font-size: 24px; background: yellow;</option>
+                            <option value="border: 2px solid red; padding: 10px;">border: 2px solid red;</option>
                         </select>
                         <button class="btn-primary" onclick="checkCSS()">🎯 Применить стили</button>
                     </div>
